# mech

./: .gitignore  Cargo.toml  README.md
crates/mech-sim/: Cargo.toml  README.md
crates/mech-sim/configs/: baseline.json  baseline_sweep.json  hover_thermal.json
crates/mech-sim/docs/: architecture.md  math.md
crates/mech-sim/examples/: baseline.rs
crates/mech-sim/notebooks/: mech_sim_colab.ipynb
crates/mech-sim/src/: config.rs  errors.rs  integrator.rs  lib.rs  main.rs  metrics.rs  model.rs  monitor.rs  outputs.rs  plots.rs  scenarios.rs  state.rs  sweep.rs
crates/mech-sim/tests/: monitor_and_sweeps.rs  output_layout.rs  scenario_behavior.rs
