[package]
name = "mech-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic reduced-order architecture-validation simulator for gigawatt-class terrestrial legged vehicle energy, thermal, and actuation claims."

[lib]
path = "src/lib.rs"

[[bin]]
name = "mech-sim"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
plotters.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
